--- a/src/sass/input-group/_base.scss
+++ b/src/sass/input-group/_base.scss
@@ -11,18 +11,18 @@
   &__input:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    z-index: map-get($z-index, z-100);
+    z-index: map-get($z-index, '100');
   }
 
   &__input:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    z-index: map-get($z-index, z-100);
+    z-index: map-get($z-index, '100');
   }
 
   &__input:focus:not(:last-child),
   &__input:focus:not(:first-child) {
-    z-index: map-get($z-index, z-300);
+    z-index: map-get($z-index, '300');
   }
 
   &__append {
@@ -31,7 +31,7 @@
 
     .#{$prefix}-button {
       flex-grow: 1;
-      z-index: map-get($z-index, z-200);
+      z-index: map-get($z-index, '200');
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
       display: flex;
@@ -64,7 +64,7 @@
     margin-right: -1px;
 
     .#{$prefix}-button {
-      z-index: map-get($z-index, z-200);
+      z-index: map-get($z-index, '200');
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
       display: flex;
