--- a/src/sass/modals/_base.scss
+++ b/src/sass/modals/_base.scss
@@ -14,7 +14,7 @@
 }
 
 .#{$prefix}-modal {
-  z-index: map-get($z-index, z-1000);
+  z-index: map-get($z-index, '1000');
   position: fixed;
   top: 0;
   left: 0;
